# perfect_velodyne

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: param.yaml
include/: conversions.h  perfect_velodyne.h
include/perfect_velodyne/: clustering.h  normal_estimator_component.h  normal_estimator_component.hpp  rtime_registration.h
launch/: normal_estimation.launch  normal_estimation_hdl32.launch  normal_estimation_light.launch  normal_estimator_launch.py
launch/.AppleDouble/: .Parent
src/: CMakeLists.txt  azimuth_estimation.cpp  curvature_estimation.cpp  dummy_principal_components_publisher.cpp  ensparse.cpp  normal_estimation.cpp  normal_estimation_hdl32.cpp  normal_estimation_refine.cpp  normal_estimation_refine_smoothing.cpp  normal_estimation_refine_smoothing2.cpp  normal_estimation_refine_smoothing2.cpp~  normal_estimation_refine_smoothing_light.cpp  normal_estimation_vlp16.cpp  normal_estimator.cpp  normal_estimator_component.cpp  normal_estimator_node.cpp  perfect_velodyne.cpp  perfect_velodyne_node.cpp  pose_estimation.cpp  principal_components_extractor.cpp  receiver.cpp
